# DynetTutorials

./: CMakeLists.txt  main.cpp  tmp.cpp  tmp.hpp
